[gd_scene load_steps=9 format=3 uid="uid://bjmbe2nxuyned"]

[ext_resource type="FontFile" uid="uid://b27bcx0yhecxo" path="res://assets/fonts/HSBombaram2.1.ttf" id="1_6tmeq"]
[ext_resource type="Script" path="res://src/InGame/player_control.gd" id="1_k20ig"]
[ext_resource type="Texture2D" uid="uid://buhws6i5jox4a" path="res://assets/biking_hat.png" id="2_shqif"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktqlc"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuqgm"]
bg_color = Color(0.890196, 0.862745, 0.843137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xp24"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hn3a"]
bg_color = Color(0.988235, 0, 0.443137, 0.478431)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cof2"]
bg_color = Color(0.380392, 0.6, 0.933333, 0.478431)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.933333, 0.933333, 0.933333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="PlayerControl" type="Panel"]
offset_right = 370.0
offset_bottom = 170.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ktqlc")
script = ExtResource("1_k20ig")

[node name="ClassPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 82.0
offset_bottom = 78.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yuqgm")

[node name="Label" type="Label" parent="ClassPanel"]
layout_mode = 0
offset_right = 72.0
offset_bottom = 67.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 12
text = "(30) 마법사"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ClassPanel"]
layout_mode = 0
offset_left = -5.0
offset_top = 75.0
offset_right = 87.0
offset_bottom = 98.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
text = "공격력 : 35"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ClassPanel"]
layout_mode = 0
offset_left = -5.0
offset_top = 99.0
offset_right = 87.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
text = "방어력 : 40"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ClassPanel"]
layout_mode = 0
offset_left = -5.0
offset_top = 125.0
offset_right = 87.0
offset_bottom = 148.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
text = "마법력 : 15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 14.0
offset_right = 281.0
offset_bottom = 41.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_4xp24")
theme_override_styles/fill = SubResource("StyleBoxFlat_1hn3a")
value = 30.0

[node name="MpBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 88.0
offset_top = 48.0
offset_right = 282.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
theme_override_styles/background = SubResource("StyleBoxFlat_4xp24")
theme_override_styles/fill = SubResource("StyleBoxFlat_7cof2")
value = 30.0

[node name="MpLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 15.0
offset_right = 368.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
text = "[100/100]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 285.0
offset_top = 50.0
offset_right = 368.0
offset_bottom = 73.0
theme_override_fonts/font = ExtResource("1_6tmeq")
theme_override_font_sizes/font_size = 16
text = "[100/100]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -13.0
offset_top = -11.0
offset_right = -13.0
offset_bottom = -11.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 109.0
offset_top = 98.0
offset_right = 149.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="Panel2" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 154.0
offset_top = 98.0
offset_right = 194.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="Panel3" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 199.0
offset_top = 98.0
offset_right = 239.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="Panel4" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 244.0
offset_top = 98.0
offset_right = 284.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="Panel5" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 289.0
offset_top = 98.0
offset_right = 329.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel5"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="Panel6" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 334.0
offset_top = 98.0
offset_right = 374.0
offset_bottom = 138.0

[node name="TextureRect" type="TextureRect" parent="Control/Panel6"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_shqif")
expand_mode = 1

[node name="LoadPlayerInfoTImer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
